<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            tools:context="de.semvox.directometertutorial.BasicSensorsFragment">

            <TextView
                android:id="@+id/headline"
                android:text="@string/hl_EnvironmentSensors"
                style="@style/BlukiiHeading"/>

            <include layout="@layout/separator" />

            <!--<TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="Blukii-Status:"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_sensors_blukii_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:text="Getrennt"
                android:textSize="20sp" />

            <include layout="@layout/separator" />-->

            <TextView
                android:id="@+id/tv_battery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_stateOfCharge"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_battery_read"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:enabled="false"
                android:text="@string/btn_read" />

            <include layout="@layout/separator" />

            <TextView
                android:id="@+id/tv_humidity_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/lbl_humiditySensorStart"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="0dp">

                <Button
                    android:id="@+id/btn_humidity_activate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:enabled="false"
                    android:tag="activate"
                    android:text="@string/btn_activateProfile" />

                <Button
                    android:id="@+id/btn_humidity_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:enabled="false"
                    android:text="@string/btn_read" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>